[gd_scene load_steps=4 format=3 uid="uid://dxeqojgxv2ukw"]

[ext_resource type="Script" path="res://scenes/mainPanel/job.gd" id="1_8qy33"]
[ext_resource type="Texture2D" uid="uid://737ll1jgr62j" path="res://scenes/mainPanel/batch_atlas_texture.tres" id="2_ul2oc"]
[ext_resource type="Theme" uid="uid://c8tp3l2ernw1i" path="res://fonts/guit_black_button_theme.tres" id="3_nut3s"]

[node name="job" type="Control"]
custom_minimum_size = Vector2(1080, 340)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = -1580.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_8qy33")

[node name="MarginContainer" type="MarginContainer" parent="."]
custom_minimum_size = Vector2(1080, 340)
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_nut3s")
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="TextureRect" type="TextureRect" parent="MarginContainer"]
layout_mode = 2
texture = ExtResource("2_ul2oc")
expand_mode = 3

[node name="GridContainer" type="GridContainer" parent="MarginContainer/TextureRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="DictNameLabel" type="Label" parent="MarginContainer/TextureRect/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 0
theme = ExtResource("3_nut3s")

[node name="InfoLabel" type="Label" parent="MarginContainer/TextureRect/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 0

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
